<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/colorLightest"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgStatus"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/colorLighter"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@android:drawable/ic_notification_overlay"
            android:tint="@color/colorRed" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@android:drawable/stat_sys_upload"
            android:tint="@color/colorOrange" />

        <ImageView
            android:id="@+id/imgDownload"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@android:drawable/stat_sys_download"
            android:tint="@color/colorGreen" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <CustomControls.CustomTextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/name"
                    android:textColor="@color/colorNormal"
                    android:textSize="12sp" />

                <CustomControls.CustomTextViewBold
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/name"
                    android:textColor="@color/colorDarkest"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <CustomControls.CustomTextView
                    android:id="@+id/txtMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/mobile"
                    android:textColor="@color/colorNormal"
                    android:textSize="12sp" />

                <CustomControls.CustomTextViewBold
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/mobile"
                    android:textColor="@color/colorDarkest"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgFriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@android:drawable/checkbox_on_background" />

                <CustomControls.CustomTextViewBold
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/friend"
                    android:textColor="@color/colorDarkest"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rtbScore"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:rating="2.5" />

                <CustomControls.CustomTextViewBold
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/friend"
                    android:textColor="@color/colorDarkest"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <CustomControls.CustomButtonBold
                    android:id="@+id/btnAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorNormal"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/show"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <CustomControls.CustomTextViewBold
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/address"
                    android:textColor="@color/colorDarkest"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@color/colorLighter"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/male" />

            <CustomControls.CustomButtonBold
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/colorDarkest"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>